<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">



    <TextView
        android:id="@+id/BMI_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="104dp"
        android:fontFamily="@font/autour_one"
        android:hint="@string/BMI"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="270dp"
        android:layout_height="262dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="163dp"
        android:contentDescription="@string/imagedes"
        app:srcCompat="@drawable/bmi_category" />

    <TextView
        android:id="@+id/Ressult_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BMI_value"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/Resulttext"
        android:textColor="@color/black"
        android:textSize="36sp" />

</RelativeLayout>